--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -41,13 +41,16 @@
               </li>
             <% end %>
 
-
-
               <li>
                 <i class="fa fa-comment"></i>
                 <a href="#comments"><%= @post_image.post_comments.count %></a>
               </li>
-            </ul>
+              <li>
+                <% if @post_image.user == current_user %>
+                  <%= link_to "削除", post_image_path(@post_image), method: :delete %>
+                <% end %>
+              </li>
+             </ul>
             <div class="post-content-inner mt-20">
                 <p><%= @post_image.caption %></p>
             </div>
